tests/ui/fail/write_during_2phase.stderr
error[E0308]: mismatched types
  --> tests/ui/fail/write_during_2phase.rs:24:29
   |
24 |             *pointer.as_mut(perm) += 1;
   |                      ------ ^^^^ expected `&mut dyn AllowsWrite<'_, _>`, found `Reserved<'_, {integer}>`
   |                      |
   |                      arguments to this method are incorrect
   |
   = note: expected mutable reference `&mut dyn AllowsWrite<'_, _>`
                         found struct `Reserved<'_, {integer}>`
note: method defined here
  --> src/refs.rs
   |
   |     pub fn as_mut<T>(&self, _: &mut dyn AllowsWrite<'tag, T>) -> &mut T {
   |            ^^^^^^
